# GameCatAndMouse

./: .gitignore  CMakeLists.txt  Makefile  README.md  actor.c  actor.h  animation.c  animation.h  itens.c  itens.h  lists.c  lists.h  main.c  main.code-workspace  main.h  maps.c  maps.h
build_CatAndMouse-Desktop/resources/: enemyLayer01.data  itemLayer01.data  map01.data  score.data
build_CatAndMouse-WEB/: GameCatAndMouse.data  GameCatAndMouse.html  GameCatAndMouse.js  GameCatAndMouse.wasm
build_web/: GameCatAndMouse.html  GameCatAndMouse.js  GameCatAndMouse.wasm
resources/: enemyLayer01.data  map01.data
src/: actor.c  actor.h  animation.c  animation.h  itens.c  itens.h  lists.c  lists.h  main.c  main.h  maps.c  maps.h  scene.c  scene.h  scene_game.c  scene_game.h  scene_intro.c  scene_intro.h  scene_over.c  scene_over.h  utils.c
web/: minshell.html
